--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,10 @@ image:
   file: .gitpod.dockerfile
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'init script' # runs during prebuild
+  - name: pythonenv
+    init: | 
+      pip install --upgrade pip
+      pip install pyglet stable-baselines3[extra]
     command: echo 'start script'
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
